feat: Introduce workout functionality and UI enhancements
Integrates a new workout mode, allowing users to define sequences of timed intervals with rest periods. This includes UI elements for workout navigation and step progression.

Key changes:
- Added `WorkoutMenu` and `RepDisplay` components.
- Introduced `WorkoutContext` for managing workout state.
- Updated `useCountdown` hook to support workout steps and callbacks.
- Modified `Controls` component to handle workout-specific actions.
- Enhanced `SettingsMenu` with new default duration settings.
- Refactored `App.tsx` to accommodate the new workout features.
- Updated package and metadata names for clarity.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       .theme-transition {
         transition: background-color 0.3s ease, color 0.3s ease;
       }
+      .menu-container {
+        z-index: 60;
+      }
     </style>
   <script type="importmap">
 {
