feat: Implement customizable background colors and document titles
This commit introduces the ability to customize the application's background color and refines how the document title is displayed. The background color can now be set via the `settings.backgroundColor` property, with a smooth transition applied for visual effect.

Additionally, the document title logic has been updated to provide more context-aware titles during active workouts, pauses, and idle states, improving the user experience and clarity in browser tabs. A new setting `showRestTitleOnDefaultCountdown` has also been added to control the display of 'Rest' titles in countdowns.

The default durations for exercises and rests in the Set Builder have also been updated to align with common practices.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <style>
       body {
         font-family: Arial, sans-serif;
+        /* Add a transition for smooth background color changes */
+        transition: background-color 0.3s ease;
       }
       .font-mono {
         /* Ensure even elements with font-mono class get the requested font */
@@ -37,7 +39,7 @@
 }
 </script>
 </head>
-  <body style="background-color: black; color: white;">
+  <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
