--- a/index.html
+++ b/index.html
@@ -27,18 +27,31 @@
       .menu-container {
         z-index: 60;
       }
-      @keyframes flash {
+      @keyframes pop {
+        0% { transform: scale(0.5); opacity: 0; }
+        60% { transform: scale(1.1); opacity: 1; }
+        100% { transform: scale(1); opacity: 1; }
+      }
+      @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+      @keyframes glow {
         0%, 100% {
-          background-color: rgba(55, 65, 81, 0.5); /* bg-gray-700/50 */
-          box-shadow: 0 0 0 0 rgba(99, 102, 241, 0);
+          box-shadow: 0 0 0 rgba(59, 130, 246, 0); /* blue-500 */
         }
         50% {
-          background-color: rgba(79, 70, 229, 0.4);
-          box-shadow: 0 0 10px 3px rgba(99, 102, 241, 0.5);
+          box-shadow: 0 0 15px 4px rgba(59, 130, 246, 0.6);
         }
       }
-      .animate-flash {
-        animation: flash 2s ease-in-out;
+      .animate-pop {
+        animation: pop 1s ease-out;
+      }
+      .animate-fadeIn {
+        animation: fadeIn 0.3s ease-in;
+      }
+      .animate-glow {
+        animation: glow 2.5s ease-in-out;
       }
     </style>
   <script type="importmap">
