--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.16.0",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "react": "https://aistudiocdn.com/react@^19.1.1"
+    "react": "https://aistudiocdn.com/react@^19.1.1",
+    "@vercel/kv": "https://aistudiocdn.com/@vercel/kv@^3.0.0"
   }
 }
 </script>
