--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.16.0",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
-    "@vercel/kv": "https://aistudiocdn.com/@vercel/kv@^3.0.0"
+    "@vercel/kv": "https://aistudiocdn.com/@vercel/kv@^3.0.0",
+    "firebase/app": "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js",
+    "firebase/auth": "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.2.1/"
   }
 }
 </script>
