--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     "@vercel/kv": "https://aistudiocdn.com/@vercel/kv@^3.0.0",
     "firebase/app": "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js",
     "firebase/auth": "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js",
+    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js",
     "firebase/": "https://aistudiocdn.com/firebase@^12.2.1/"
   }
 }
