--- a/index.html
+++ b/index.html
@@ -65,10 +65,7 @@
     "firebase/app": "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js",
     "firebase/auth": "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js",
     "firebase/firestore": "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.2.1/",
-    "@firebase/app": "https://aistudiocdn.com/@firebase/app@^0.14.3",
-    "@firebase/auth": "https://aistudiocdn.com/@firebase/auth@^1.11.0",
-    "@firebase/firestore": "https://aistudiocdn.com/@firebase/firestore@^4.9.2"
+    "firebase/": "https://aistudiocdn.com/firebase@^12.2.1/"
   }
 }
 </script>
